CREATE TABLE Client (
  NIF          varchar2(255) NOT NULL, 
  emailAddress varchar2(255) NOT NULL UNIQUE, 
  name         varchar2(255) NOT NULL, 
  addressId    number(10) NOT NULL);
CREATE TABLE Courier (
  NIF          varchar2(255) NOT NULL ,
  emailAddress varchar2(255) NOT NULL UNIQUE, 
  name         varchar2(255) NOT NULL, 
  IBAN         varchar2(255) NOT NULL, 
  cellPhone    varchar2(255) NOT NULL, 
  weight       number(6, 2) NOT NULL, 
  PharmacyNIF  varchar2(255) NOT NULL,
  payload	   number(6, 2) NOT NULL);
CREATE TABLE PharmacyAdministrator (
  email       varchar2(255) NOT NULL, 
  name        varchar2(255) NOT NULL, 
  PharmacyNIF varchar2(255) NOT NULL);
CREATE TABLE Address (
  id         number(10) GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  street     varchar2(255) NOT NULL, 
  doorNumber varchar2(255) NOT NULL, 
  city       varchar2(255) NOT NULL, 
  country    varchar2(255) NOT NULL);
CREATE TABLE Pharmacy (
  NIF         varchar2(255)  NOT NULL,
  designation varchar2(255) NOT NULL, 
  addressId   number(10) NOT NULL);
CREATE TABLE Scooter (
  QRCode    varchar2(255) NOT NULL UNIQUE, 
  Vehicleid number(10) GENERATED BY DEFAULT AS IDENTITY NOT NULL);
CREATE TABLE Park (
  id          number(10)  GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  PharmacyNIF varchar2(255) NOT NULL,
  Power       number(6,2) NOT NULL);
CREATE TABLE ParkSlot (
  id        number(10)  GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  ParkID    number(10) NOT NULL, 
  Vehicleid number(10));
CREATE TABLE ChargingStation (
  ParkSlotID number(10) GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  power number(6,2) NOT NULL,
  capacity number(6,2) NOT NULL);
CREATE TABLE Stock (
  id                          number(10)  GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  PharmacyNIF                 varchar2(255) NOT NULL);
CREATE TABLE Item (
  id     number(10)  GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  name   varchar2(255) NOT NULL, 
  price  number(6, 2) NOT NULL, 
  weight number(6, 2) NOT NULL);
CREATE TABLE "Order" (
  id         number(10)  GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  status     varchar2(255) NOT NULL, 
  itemsPrice number(6, 2) NOT NULL, 
  ClientNIF  varchar2(255) NOT NULL);
CREATE TABLE OrderItem (
  itemID        number(10) NOT NULL, 
  orderID       number(10)  NOT NULL,  
  itemsQuantity number(10) NOT NULL);
CREATE TABLE Credits (
  id                number(10)  GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  numberOfCredits   number(10) NOT NULL, 
  ClientNIF         varchar2(255) NOT NULL);
CREATE TABLE Receipt (
  id          number(10)  GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  totalPrice  number(6, 2) NOT NULL, 
  orderID     number(10) NOT NULL, 
  ClientNIF   varchar2(255) NOT NULL, 
  PharmacyNIF varchar2(255) NOT NULL);
CREATE TABLE StockItem (
  itemId        number(10) NOT NULL, 
  stockId       number(10) NOT NULL, 
  itemsQuantity number(10) NOT NULL);
CREATE TABLE GeoLocation (
  id        number(10) GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  latitude  number(10, 5) NOT NULL,
  longitude number(10, 5) NOT NULL,
  altitude  number(10) NOT NULL,
  Addressid number(10) NOT NULL);
CREATE TABLE Drone (
  payload   number(6, 2) NOT NULL,
  Vehicleid number(10) GENERATED BY DEFAULT AS IDENTITY NOT NULL);
CREATE TABLE DronePark (
  Parkid number(10) GENERATED BY DEFAULT AS IDENTITY NOT NULL);
CREATE TABLE ScooterPark (
  Parkid number(10) GENERATED BY DEFAULT AS IDENTITY NOT NULL);
CREATE TABLE Path (
  GeoLocationIdStart number(10) NOT NULL,
  GeoLocationIdEnd   number(10) NOT NULL, 
  distance           number(6, 2) NOT NULL, 
  windDirection      number(6, 2) NOT NULL, 
  windVelocity       number(6, 2) NOT NULL);
CREATE TABLE LandPath (
  roadResistanceCoefficient number(6, 2) NOT NULL, 
  elevation                 number(6, 2) NOT NULL, 
  PathGeoLocationIdEnd      number(10) NOT NULL, 
  PathGeoLocationIdStart    number(10) NOT NULL);
CREATE TABLE AerialPath (
  airDensity             number(6, 2) NOT NULL, 
  airDragCoefficient     number(6, 2) NOT NULL, 
  PathGeoLocationIdEnd   number(10) NOT NULL, 
  PathGeoLocationIdStart number(10) NOT NULL);
CREATE TABLE Delivery (
  Orderid       number(10) GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  status        varchar2(255) NOT NULL, 
  shippingPrice number(6, 2) NOT NULL, 
  CourierNIF    varchar2(255),
  DroneVehicleid    number(10));
CREATE TABLE Vehicle (
  id                 number(10)  GENERATED BY DEFAULT AS IDENTITY NOT NULL, 
  batterySize        number(6, 2) NOT NULL, 
  batteryConsumption number(6, 2) NOT NULL, 
  batteryEfficiency  number(6, 2) NOT NULL, 
  currentBattery     number(6, 2) NOT NULL, 
  weight             number(6, 2) NOT NULL, 
  frontalArea        number(6, 2) NOT NULL, 
  motorPower         number(6, 2) NOT NULL, 
  PharmacyNIF        varchar2(255) NOT NULL);
